trazilica za mob

--- a/src/pages/orders/complete-order/complete-order.html
+++ b/src/pages/orders/complete-order/complete-order.html
@@ -15,7 +15,7 @@
         <img src="assets/imgs/{{order.img}}">
       </ion-thumbnail>
       <h2>{{order.naziv}}</h2>
-      <p>Zapremnina : {{order.kalo}}</p>
+      <p>Zapremnina : {{order.qty}}</p>
       <p>Paketa : {{order.boxes}}</p>
       <p>Boca : {{order.boce}}</p>
       <button icon-only color="danger" ion-button clear item-end (click)="RemoveItem(order)" ><ion-icon name="close"></ion-icon></button>
