--- a/src/pages/primke/primka/primka.html
+++ b/src/pages/primke/primka/primka.html
@@ -33,13 +33,13 @@
               </ion-item>
             </ion-col> -->
             <ion-col>
-              <button ion-button icon-start clear small (click)="presentPrompt(i ,'gajbe')">
+              <button ion-button icon-start clear small (click)="presentPrompt(artikal, 'gajbe')">
                 <ion-icon name="cube"></ion-icon>
                 <div>{{artikal.paketi_kol}}</div>
               </button>
             </ion-col>
             <ion-col>
-                <button ion-button icon-start clear small (click)="presentPrompt(i, 'boce')">
+                <button ion-button icon-start clear small (click)="presentPrompt(artikal, 'boce')">
                   <ion-icon name="wine"></ion-icon>
                   <div>{{artikal.boce_kol}}</div>
                 </button>
