--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -11,9 +11,9 @@
 
 <ion-content padding>
   <ion-item>
-    <ion-input type="text" (input)='onInputParam()' [(ngModel)]="searchParam" clearInput></ion-input>
+    <ion-input type="text" (input)='onInputParam($event)' [(ngModel)]="searchParam" clearInput></ion-input>
   </ion-item>
-  <ion-list *ngIf="searchParam != '' ">
+  <ion-list>
     <ion-item *ngFor="let artikal of displayArtikli; let i = index">
       <ion-avatar item-start>
         <img src="assets/imgs/{{artikal.img}}">
